# Oatmeal

./: .env.example  .eslintrc.js  .gitignore  CLAUDE.md  CODEX.md  README.md  codex.yaml  package-lock.json  package.json  restore_audio.sh  setup_audio_routing.sh  tailwind.config.js  tsconfig.base.json  turbo.json
.codex/: config.toml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/src/: database.rs  main.rs  permissions.rs  sckit.rs  transcribe.rs
apps/desktop/src-tauri/src/audio/: mod.rs  real.rs  runtime.rs  simple.rs  simple_runtime.rs
apps/desktop/src/components/: LiveNotes.tsx  MenuBar.tsx  Pill.tsx  PostCallScreen.tsx  RecorderPanel.tsx  SessionsHistory.tsx  SettingsPanel.tsx  Waveform.tsx
apps/desktop/src/hooks/: useAudio.ts  useSettings.ts
scripts/: download-models.js  download-whisper-models.js  record-sample.js
